log
Tue, May 13, 2025  7:50:15 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Tue, May 13, 2025  7:56:15 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:9: error: expected ';' before '}' token
         }
         ^
6fd429e
Tue, May 13, 2025  7:57:39 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7ec1574
Tue, May 13, 2025  7:58:56 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
926631a
Tue, May 13, 2025  8:17:23 PM: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 35/70
ca1cf16
Tue, May 13, 2025  8:22:31 PM: 
 sudoku.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
23c5457
Wed, May 14, 2025  8:19:15 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|3
total_score: 35/70
3f23c88
Wed, May 14, 2025  8:20:36 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b0f0a5b
Wed, May 14, 2025  8:24:23 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:103:18: error: passing argument 1 of 'is_valid' from incompatible pointer type [-Werror=incompatible-pointer-types]
      if(is_valid(nuevo->sudo))
                  ^~~~~
sudoku.c:45:5: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'int (*)[9]'
 int is_valid(Node *n){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
10f3d27
Wed, May 14, 2025  8:24:46 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
68592ca
Wed, May 14, 2025  8:28:48 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
3fcbcb0
Wed, May 14, 2025  8:30:02 AM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
2cc8ee8
